add splash screena and home page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   background-color: #c7c5c5;
-}
+} */
+
+/* Please style with Tailwind so it doesn't affect generally*/
