--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
